# zero-logger

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake/: buildType.cmake  compiler.cmake  options.cmake  platform.cmake
cmd/windows/: clone_dependencies.bat
src/lib/: CMakeLists.txt
src/lib/core/: CMakeLists.txt
src/lib/core/private/: DefaultLogger.cpp  Log.cpp  zero_logger.cpp
src/lib/core/public/zero/core/: DefaultLogger.hpp  ELogLevels.hpp  ILogger.hxx  Log.hpp  zero_logger.hpp
src/lib/private/zero/core/log/: DefaultLogger.cpp  Log.cpp
src/lib/private/zlog/: DefaultLogger.cpp  Log.cpp  zero_logger.cpp
src/lib/public/zero/core/log/: ILogger.hxx  Log.hpp
src/lib/public/zlog/: ELogLevels.hpp
src/lib/public/zlog/cfg/: zero_api.hpp  zero_assert.hpp  zero_platform.hpp
src/test/: CMakeLists.txt
src/test/private/: main.cpp
src/test/public/: main.hpp
