# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# CMAKE
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

cmake_minimum_required( VERSION ${CMAKE_VERSION} )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# CONFIGS
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

# Project Name
set( PROJECT_NAME "zlog.test" )

# Sources Dir
set( SRC_DIR "${CMAKE_SOURCE_DIR}/src/test" )
set( SRC_PUBLIC_DIR "${SRC_DIR}/public/" )
set( SRC_PRIVATE_DIR "${SRC_DIR}/private/" )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# PROJECT
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

# Configure Project
project( ${PROJECT_NAME} VERSION ${PROJECT_VERSION} LANGUAGES C CXX )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# HEADERS
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

set( ZERO_HEADERS
    "${SRC_PUBLIC_DIR}main.hpp" )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# SOURCES
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

set( ZERO_SOURCES
    "${SRC_PRIVATE_DIR}main.cpp" )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# BUILD
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

# Add Executable-Object
add_executable( zlog_test ${ZERO_HEADERS} ${ZERO_SOURCES} )

# Link
target_include_directories( zlog_test PUBLIC "${CMAKE_SOURCE_DIR}/src/lib/public" )
target_link_libraries( zlog_test zlog )

# Configure Executable-Object
set_target_properties( zlog_test PROPERTIES
    RUNTIME_OUTPUT_NAME "zlog_test_v${PROJECT_VERSION}"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin" )

# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
