# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# CMAKE
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

cmake_minimum_required( VERSION ${CMAKE_VERSION} )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# CONFIGS
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

# Project Name
set( PROJECT_NAME "log.test" )

# Sources Dir
set( SRC_DIR "${CMAKE_SOURCE_DIR}/src/test" )
set( SRC_PUBLIC_DIR "${SRC_DIR}/public/" )
set( SRC_PRIVATE_DIR "${SRC_DIR}/private/" )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# PROJECT
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

# Configure Project
project( ${PROJECT_NAME} VERSION ${PROJECT_VERSION} LANGUAGES C CXX )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# HEADERS
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

set( ZERO_HEADERS
    "${SRC_PUBLIC_DIR}main.hpp" )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# SOURCES
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

set( ZERO_SOURCES
    "${SRC_PRIVATE_DIR}main.cpp" )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# BUILD
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

# Add Executable-Object
add_executable( log_test ${ZERO_HEADERS} ${ZERO_SOURCES} )

# Link
target_include_directories( log_test PUBLIC "${ZERO_LOGGER_INCLUDE_DIR}" )
target_link_libraries( log_test zero_logger )

# Configure Executable-Object
set_target_properties( log_test PROPERTIES
    RUNTIME_OUTPUT_NAME "log_test_v${PROJECT_VERSION}"
    RUNTIME_OUTPUT_DIRECTORY "${ZERO_OUTPUT_DIR}" )

# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
